@@ -8,6 +8,10 @@ v2.1.2
 ! site changes broke the imdb class methods keywords(), seasons(), languages(), mpaa_reason(), goofs()
 ! site changes confused imdb::extReviews(), imdb::videosites()
 ! company info URLs were just the IMDB relative URL w/o protocol and site. Added the missing info
+! if production spanned multiple years (xxxx-yyyy), movie type was setup wrongly ("type xxxx-")
++ added method imdb::endyear() for cases where production spanned multiple years. So for
+  "xxxx-yyyy" this returns "yyyy", while imdb::year() is adjusted to "xxxx". Otherwise, both
+  return the same year.
 
 v2.1.1 (19.12.2011)
 -------------------
